add Opponent | Advanced Algorithm menu item

--- a/Othello.csproj
+++ b/Othello.csproj
@@ -99,6 +99,9 @@
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent />
