--- a/Othello.csproj
+++ b/Othello.csproj
@@ -83,9 +83,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Board.cs" />
+    <Compile Include="BoardState.cs" />
     <Compile Include="ComputerPlayer.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Coord.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
