--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BoardStateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ComputerPlayerTests.cs" />
+    <Compile Include="CoordTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
