--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardStateTests.cs" />
+    <Compile Include="ComputerPlayersCompete.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ComputerPlayerTests.cs" />
     <Compile Include="CoordTests.cs" />
