--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ComputerPlayerTests.cs" />
     <Compile Include="CoordTests.cs" />
+    <Compile Include="ComputerPlayerRecusiveDepthTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
