--- a/Othello/Othello.csproj
+++ b/Othello/Othello.csproj
@@ -99,33 +99,16 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Board.cs" />
-    <Compile Include="BoardState.cs" />
-    <Compile Include="ComputerPlayer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ComputerPlayer_Basic.cs" />
-    <Compile Include="ComputerPlayer_Advanced.cs" />
-    <Compile Include="ComputerPlayer_Ultimate.cs" />
-    <Compile Include="ComputerPlayer_Expert.cs" />
-    <Compile Include="ComputerPlayer_Intermediate.cs" />
-    <Compile Include="ComputerPlayer_Beginner.cs" />
-    <Compile Include="ComputerPlayer_Recursive.cs" />
-    <Compile Include="Coord.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Square.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Content Include="App.ico" />
-    <Content Include="TODO.txt" />
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Board.cd" />
-    <None Include="ComputerPlayer.cd" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -133,6 +116,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OthelloLib\OthelloLib.csproj">
+      <Project>{9ff6a0d3-402f-4856-aa18-f5a604290934}</Project>
+      <Name>OthelloLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
