--- a/Othello/Othello.csproj
+++ b/Othello/Othello.csproj
@@ -103,6 +103,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Content Include="App.ico" />
+    <Content Include="TODO App.txt" />
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
