--- a/OthelloLib/OthelloLib.csproj
+++ b/OthelloLib/OthelloLib.csproj
@@ -54,7 +54,7 @@
     <None Include="ComputerPlayer.cd" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TODO.txt" />
+    <Content Include="TODO Lib.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
